--- a/resistorCalc/Base.lproj/Main.storyboard
+++ b/resistorCalc/Base.lproj/Main.storyboard
@@ -1,24 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="C83-iB-jog">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="resistorCalc" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tO8-BQ-OKc">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m7w-GL-pKc">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="155"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="54" translatesAutoresizingMaskIntoConstraints="NO" id="YvD-nv-iWb">
+                                                <rect key="frame" x="20" y="20" width="374" height="115"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resistor Value Calc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ix8-F4-hER">
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30.5"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgL-tX-iXH">
+                                                        <rect key="frame" x="0.0" y="84.5" width="374" height="30.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzi-Lc-Y7V">
+                                                <rect key="frame" x="100" y="134" width="266" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="YvD-nv-iWb" firstAttribute="top" secondItem="m7w-GL-pKc" secondAttribute="top" constant="20" id="0Yo-Ad-oLz"/>
+                                            <constraint firstItem="YvD-nv-iWb" firstAttribute="leading" secondItem="m7w-GL-pKc" secondAttribute="leading" constant="20" id="EBa-GA-3Sa"/>
+                                            <constraint firstAttribute="trailing" secondItem="YvD-nv-iWb" secondAttribute="trailing" constant="20" id="dXy-nE-WN4"/>
+                                            <constraint firstAttribute="bottom" secondItem="YvD-nv-iWb" secondAttribute="bottom" constant="20" id="vq1-Lb-tG0"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROr-U8-lOW">
+                                        <rect key="frame" x="0.0" y="155" width="414" height="309.5"/>
+                                        <subviews>
+                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4w3-me-vcV">
+                                                <rect key="frame" x="20" y="46.5" width="374" height="216"/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="hNy-Qr-6Kd"/>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ara-gc-RK0"/>
+                                                </connections>
+                                            </pickerView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="4w3-me-vcV" firstAttribute="centerY" secondItem="ROr-U8-lOW" secondAttribute="centerY" id="4hf-rX-CE7"/>
+                                            <constraint firstItem="4w3-me-vcV" firstAttribute="leading" secondItem="ROr-U8-lOW" secondAttribute="leading" constant="20" id="AvM-U6-Vq0"/>
+                                            <constraint firstAttribute="trailing" secondItem="4w3-me-vcV" secondAttribute="trailing" constant="20" id="yrz-lZ-4oo"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wLi-o0-v16">
+                                        <rect key="frame" x="0.0" y="464.5" width="414" height="309.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="resistor" translatesAutoresizingMaskIntoConstraints="NO" id="tFW-3l-Z4y">
+                                                <rect key="frame" x="20" y="20" width="374" height="269.5"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="tFW-3l-Z4y" secondAttribute="trailing" constant="20" id="8pJ-S9-yRn"/>
+                                            <constraint firstItem="tFW-3l-Z4y" firstAttribute="leading" secondItem="wLi-o0-v16" secondAttribute="leading" constant="20" id="Yle-mq-58i"/>
+                                            <constraint firstAttribute="bottom" secondItem="tFW-3l-Z4y" secondAttribute="bottom" constant="20" id="kE1-S6-rCa"/>
+                                            <constraint firstItem="tFW-3l-Z4y" firstAttribute="top" secondItem="wLi-o0-v16" secondAttribute="top" constant="20" id="tJw-vh-P5f"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ROr-U8-lOW" firstAttribute="height" secondItem="tO8-BQ-OKc" secondAttribute="height" multiplier="0.4" id="RBM-Lz-RNC"/>
+                                    <constraint firstItem="wLi-o0-v16" firstAttribute="height" secondItem="tO8-BQ-OKc" secondAttribute="height" multiplier="0.4" id="sUP-TG-8Qv"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tO8-BQ-OKc" secondAttribute="bottom" id="6D4-lN-Jss"/>
+                            <constraint firstItem="tO8-BQ-OKc" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="A63-Xh-xt7"/>
+                            <constraint firstItem="tO8-BQ-OKc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Bpk-xh-b07"/>
+                            <constraint firstItem="tO8-BQ-OKc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="EbX-qf-4s9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tO8-BQ-OKc" secondAttribute="trailing" id="Q6V-2S-78Y"/>
+                            <constraint firstItem="tO8-BQ-OKc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WQH-Nf-dK7"/>
+                            <constraint firstItem="tO8-BQ-OKc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ZS7-Of-ywe"/>
+                            <constraint firstItem="tO8-BQ-OKc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="klF-KK-Dpq"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="jl4-gG-C0p"/>
+                    <connections>
+                        <outlet property="pickerView" destination="4w3-me-vcV" id="1C2-P0-THR"/>
+                        <outlet property="textArea" destination="fgL-tX-iXH" id="X4K-t8-cVV"/>
+                        <outlet property="textTwo" destination="bzi-Lc-Y7V" id="Bag-CG-PMc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="928.98550724637687" y="78.348214285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="38o-ZE-EII">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C83-iB-jog" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bGL-yB-hcM">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="D7N-hH-0Bn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UR1-PS-3Ro" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="78.348214285714278"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="resistor" width="985" height="616"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
